[package]
name = "dna-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "dna_parser"
crate-type= ["cdylib"]

[dependencies]
rand= "0.8.5"
itertools = "0.10.2"
numpy= "0.17"



[dependencies.pyo3]
version= "0.17"
features= ["extension-module"]